--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <button onclick="generateFoodIdea()">Generate meat idea</button>
+        <button onclick="generateMeatIdea()">Generate meat idea</button>
         <p id="meat"></p>
+        <button onclick="generateVeggieIdea()">Generate veggie idea</button>
+        <p id="veggie"></p>
+        <button onclick="generateCarbIdea()">Generate carb idea</button>
+        <p id="carb"></p>
         <script>
-            function generateFoodIdea() {
-                const dishes = ["Boiled pork belly", "Hardboiled eggs", "Spicy korean fish cake"];
-                document.getElementById("meat").innerHTML = dishes[(Math.floor(Math.random() * dishes.length))];
+            function generateMeatIdea() {
+                const meats = ["Boiled pork belly", "Hardboiled eggs", "Spicy korean fish cake",
+                                "Hainan chicken", "Baked spam", "Miso butter salmon",
+                                "Baked chicken", "Baked meatballs", "Fried egg", "Pork chops", "Tomato egg",
+                                "Fried tofu", "Fried dumplings", "Spicy braised tofu", "Pan seared chicken", "Steamed fish",
+                                "Ochazuke", "Teriyaki salmon"];
+                document.getElementById("meat").innerHTML = meats[(Math.floor(Math.random() * meats.length))];
+            }
+            function generateVeggieIdea() {
+                const veggies = ["Kimchi", "Roasted brussel sprouts", "Roasted potatoes", "Roasted sweet potatoes", "Miso eggplant",
+                                 "Garlic snow peas", "Garlic green beans", "Sauteed mushrooms with butter", "Roasted carrots", "Korean seaweed soup"];
+                document.getElementById("veggie").innerHTML = veggies[(Math.floor(Math.random() * veggies.length))];
+            }
+            function generateCarbIdea() {
+                const carbs = ["Steamed bun", "Mac and cheese", "Rice", "Rice with furikake", "Rice with edamame", "Pasta", "Korean pancake",
+                               "Green onion pancake", "Chili oil noodles"];
+                document.getElementById("carb").innerHTML = carbs[(Math.floor(Math.random() * carbs.length))];
             }
         </script>
     </body>
