--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
         <p id="carb"></p>
         <script>
             function generateMeatIdea() {
-                const meats = ["Boiled pork belly", "Hardboiled eggs", "Spicy korean fish cake",
+                const meats = ["Boiled pork belly", "Marinated hardboiled eggs", "Spicy korean fish cake",
                                 "Hainan chicken", "Baked spam", "Miso butter salmon",
                                 "Baked chicken", "Baked meatballs", "Fried egg", "Pork chops", "Tomato egg",
                                 "Fried tofu", "Fried dumplings", "Spicy braised tofu", "Pan seared chicken", "Steamed fish",
-                                "Ochazuke", "Teriyaki salmon"];
+                                "Ochazuke", "Teriyaki salmon", "Kimchi jjigae", "Dakbokkeumtang", "Japanese curry",
+                                "Garlic miso wings", "Buffalo wings"];
                 document.getElementById("meat").innerHTML = meats[(Math.floor(Math.random() * meats.length))];
             }
             function generateVeggieIdea() {
                 const veggies = ["Kimchi", "Roasted brussel sprouts", "Roasted potatoes", "Roasted sweet potatoes", "Miso eggplant",
-                                 "Garlic snow peas", "Garlic green beans", "Sauteed mushrooms with butter", "Roasted carrots", "Korean seaweed soup"];
+                                 "Garlic snow peas", "Garlic green beans", "Sauteed mushrooms with butter", "Roasted carrots", "Korean seaweed soup",
+                                 "Miso soup"];
                 document.getElementById("veggie").innerHTML = veggies[(Math.floor(Math.random() * veggies.length))];
             }
             function generateCarbIdea() {
                 const carbs = ["Steamed bun", "Mac and cheese", "Rice", "Rice with furikake", "Rice with edamame", "Pasta", "Korean pancake",
-                               "Green onion pancake", "Chili oil noodles"];
+                               "Green onion pancake", "Chili oil noodles", "Garlic bread"];
                 document.getElementById("carb").innerHTML = carbs[(Math.floor(Math.random() * carbs.length))];
             }
         </script>
