more coloring changes

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <button onclick="generateMainOrMeatIdea()">Generate main dish or meat idea</button>
+        <button id="meatbutton" onclick="generateMainOrMeatIdea()">Generate main dish or meat idea</button>
         <p id="meat"></p>
-        <button onclick="generateVeggieIdea()">Generate veggie idea</button>
+        <button id="veggiebutton" onclick="generateVeggieIdea()">Generate veggie idea</button>
         <p id="veggie"></p>
-        <button onclick="generateCarbIdea()">Generate carb idea</button>
+        <button id="carbbutton" onclick="generateCarbIdea()">Generate carb idea</button>
         <p id="carb"></p>
         <script>
             function generateMainOrMeatIdea() {
