--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                                 "Ochazuke", "Teriyaki salmon", "Kimchi jjigae", "Dakbokkeumtang", "Japanese curry",
                                 "Garlic miso wings", "Buffalo wings", "Teriyaki tofu", "Sauteed pork belly", "Butter chicken",
                                 "Chicken soup", "Lemon pepper chicken", "Thai basil chicken", "Salmon seaweed wraps", "Asian style spareribs",
-                                "Taiwanese popcorn tofu", "Spicy cilantro chicken", "3 cup chicken", "Yuzu glazed salmon", "Flatbread pizza"];
+                                "Taiwanese popcorn tofu", "Spicy cilantro chicken", "3 cup chicken", "Yuzu glazed salmon", "Flatbread pizza",
+                                "Ginger pork belly", "Honey sriracha sauce chicken/pork belly/shrimp"];
                 document.getElementById("meat").innerHTML = meats[(Math.floor(Math.random() * meats.length))];
             }
             function generateVeggieIdea() {
