style and change drink button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p id="carb"></p>
         <button id="snackbutton" onclick="generateSnackIdea()">Generate snack/dessert/breakfast idea</button>
         <p id="snack"></p>
-        <button id="drinkbutton" onclick="generateCarbIdea()">Generate drink idea</button>
+        <button id="drinkbutton" onclick="generateDrinkIdea()">Generate drink idea</button>
         <p id="drink"></p>
         <script>
             function generateMainOrMeatIdea() {
